--- a/Licenta/appsettings.Development.json
+++ b/Licenta/appsettings.Development.json
@@ -11,6 +11,6 @@
     "Secret": "StrONGKAutHENTICATIONKEy"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=licenta;Username=postgres;Password=admin;Port=5432"
+    "DefaultConnection": "Host=localhost;Database=licenta;Username=postgres;Password=123;Port=5433"
   }
 }
