--- a/Licenta/appsettings.json
+++ b/Licenta/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=licenta;User ID=postgres;Password=123;Port=5433"
+  }
 }
